Fixes a graphical glitch where the extra header buttons in a panel are pushed outside the box for long titles. The header text now wraps instead.

--- a/website/js/css/custom.css
+++ b/website/js/css/custom.css
@@ -983,7 +983,7 @@ div.variant-detail-group .panel-title {
     flex-direction: row;
 }
 div.variant-detail-group .panel-title .title {
-    flex: 1 0 auto;
+    flex: 1 1 auto;
 }
 
 div.variant-detail-group .panel-help-btn {
